fix: wrap code blocks, adjust some content to fit

--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -12,6 +12,10 @@
         color: $linkColour;
     }
 
+    code {
+        white-space: pre-wrap;
+    }
+
     h1,
     h2,
     h3,
